[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "^0.3"
aws-sdk-dynamodb = "^0.3"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "1", features = ["full"] }
log = "^0.4"
simple_logger = "^1"
uuid = { version = "^0.8", features = ["v4"]}
hyper = "0.14.27"


[[bin]]
name = "create"
path = "src/bin/create_handler.rs"

[[bin]]
name = "get"
path = "src/bin/get_handler.rs"

[[bin]]
name = "getByCategory"
path = "src/bin/get_by_ category_handler.rs"
